<resources>
    <string name="app_name">Attesa</string>
    <string name="full_name">full name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="phone">phone</string>
    <string name="register">Register</string>
    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_HC">health card number required</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="input_error_HC_invalid">enter a valid health card number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <string name="str_register">Register</string>
    <string name="str_health_card_no">Health Card No.</string>
    <string name="str_phone">Phone</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_full_name">Full Name</string>
    <string name="str_login">Login</string>
    <string name="title_activity_main" />
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" />
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="str_my_profile">My Profile</string>
    <string name="str_my_visits">My Visits</string>
    <string name="str_account">Account</string>
    <string name="str_settings">Settings</string>
    <string name="str_log_out">Log out</string>
    <string name="str_incorrectCreds">Incorrect Credentials!</string>
    <string name="str_takenEmail">This email is already in use.</string>
    <string name="str_testWalkin">Walk-in</string>
    <string name="str_testPhone">(905) 663–3993</string>
    <string name="str_clinic_added">Clinic added!</string>
    <string name="str_enter_clinic_name">Enter a Clinic Name.</string>
    <string name="str_unknown">Unknown</string>
    <string name="str_errRead">The read failed:</string>
    <string name="str_noline">0</string>
    <string name="str_get_in_line">Get In Line</string>
    <string name="title_activity_clinic_select">ClinicSelectActivity</string>
    <string name="tab_text_1">Details</string>
    <string name="tab_text_2">Reviews</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="str_new_clinic">New Clinic</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_you_re_now_in_line">You\'re almost done!</string>
    <string name="str_confirmMsg">We need to send a few of your details to the clinic. This will help reduce your waiting time.</string>
    <string name="str_visitConfirmedMsg">Visit added to your history!</string>
    <string name="str_errHC">Error: No HC found for submission!</string>
    <string name="str_cancel_my_visit">Cancel My Visit</string>
    <string name="str_confirm_cancel">You are about to leave the line!</string>
    <string name="str_oops">Oops! That password is not correct.</string>
    <string name="str_safe">Please confirm your password:</string>
    <string name="str_leave_line">Leave My Spot In Line</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_newprofilebio">Edit your profile and enter a bio!</string>
    <string name="bio">Bio</string>
    <string name="str_proemail">Email</string>
    <string name="str_save">Save</string>
    <string name="str_update_profile">Update Profile</string>
    <string name="str_your_name">Your Name</string>
    <string name="str_editprosuccess">Your profile has been updated!</string>
    <string name="str_counter">00:00:00</string>
    <string name="str_my_reviews">My Reviews</string>
    <string name="str_100perc">100%</string>
    <string name="str_rating">Rating</string>
    <string name="str_submit_review">Submit Review</string>
    <string name="str_skip_this">Skip this</string>
    <string name="str_leave_a_comment">Leave a comment…</string>
    <string name="str_rate_your_experience">Rate your experience!</string>
    <string name="str_nocomment">No comment</string>
    <string name="str_good">Good</string>
    <string name="str_bad">Bad</string>
    <string name="str_your_turn_in_the_next">Your turn in the next</string>
    <string name="str_people_ahead">People Ahead</string>
    <string name="str_delete_my_account">Delete My Account</string>
    <string name="str_update_health_card">Update Health Card</string>
    <string name="str_change_password">Change Password</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="str_current_password">Current Password</string>
    <string name="str_confirm_new_password">Confirm New Password</string>
    <string name="str_newpassword">New Password</string>
    <string name="str_update_password">Update Password</string>
</resources>
