<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLGray"
    tools:context=".LoginActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorHint"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/edit_text_lemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_email"
            android:fontFamily="serif"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/edit_text_password"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint" />


        <EditText
            android:id="@+id/edit_text_lpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_password"
            android:fontFamily="serif"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:nextFocusDown="@id/edit_text_phone"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/str_login"
            android:background="@color/colorPrimary"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="68dp" />

</RelativeLayout>